--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </header>
 
   <main id="maincontent" tabindex="1">
-    <section id="map-container" aria-label="map">
-      <div id="map"></div>
+    <section id="map-container" aria-label="map" role="application">
+      <div id="map" ></div>
     </section>
     <section tabindex ="2">
       <div class="filter-options">
