--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" tabindex="1">
+    <ul id="breadcrumb" tabindex="1" role="navigation">
       <li><a href="/" aria-label="link home">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -31,12 +31,12 @@
   <main id="maincontent" tabindex="2" aria-label="main content">
     <!-- Beginning map -->
     <section id="map-container" aria-label="map">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" tabindex="3">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
